--- a/nginx.conf
+++ b/nginx.conf
@@ -9,7 +9,7 @@ http {
         ssl_certificate_key    /certs/server.key;
         ssl_client_certificate /certs/ca.crt;
         ssl_verify_client      on;
-        ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+        ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
         ssl_ciphers   HIGH:!aNULL:!MD5;
         access_log /logs/access.log;
         error_log /logs/error.log debug; 
