Server Certificate rebuilded with DNS_ALT_NAME (https://www.ietf.org/rfc/rfc2818.txt)

--- a/certs/openssl_ext.conf
+++ b/certs/openssl_ext.conf
@@ -7,13 +7,17 @@ prompt = no
 C = AR
 ST = BA
 O = DUMMY_ORG
-OU = ETH
+OU = TEST
 CN = localhost
 emailAddress = email@email.com
 
 [server_extensions]
 keyUsage = digitalSignature,keyEncipherment
 extendedKeyUsage=serverAuth
+subjectAltName = @alt_names
+
+[alt_names]
+DNS.1   = localhost
 
 [client_extensions]
 keyUsage = digitalSignature,keyEncipherment
